# nxbt

./: .gitignore  pyproject.toml  requirements.txt  test_backend.py  test_cli.py  test_imports.py  test_imu.py  test_input.py  test_qt_core.py  test_svg_utils.py  test_tui.py
nxbt/: __init__.py  __main__.py  backend.py  backend_base.py  backend_bumble.py  backend_linux_bluez.py  backend_manager.py  cli.py  nxbt.py  tui.py
nxbt/controller/: __init__.py  controller.py  imu.py  input.py  protocol.py  server.py
nxbt/qt/: __init__.py  app.py  controller_manager.py  input_packets.py  models.py  motion.py  svg_utils.py
nxbt/qt/input_backends/: __init__.py  base.py  keyboard.py  manager.py  pygame.py  sdl3.py
nxbt/qt/widgets/: controller_preview.py  create_controller_dialog.py  main_window.py  session_card.py
nxbt/web/: app.py
