[project]
name = "nxbt"
version = "0.1.0"
description = "Control your Nintendo Switch through a website, terminal, or macro."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Reece Walsh", email = "reece@brikwerk.com"},
    {name = "Yutao Chen", email = "chenyutao0706@gmail.com"}
]
license = {text = "MIT"}
keywords = ["nintendo", "switch", "bluetooth", "macro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    "dbus-python==1.3.2; platform_system == 'Linux'",
    "Flask==3.1.0",
    "Flask-SocketIO==5.3.4",
    "eventlet==0.40.3",
    "blessed==1.17.10",
    "pynput==1.7.1",
    "psutil==5.9.8",
    "cryptography>=44.0.3,<46",
    "jinja2==3.1.2",
    "itsdangerous==2.2",
    "Werkzeug==3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
]
windows = [
    "bumble==0.0.226"
]

[project.urls]
Homepage = "https://github.com/typenoob/nxbt"
Repository = "https://github.com/typenoob/nxbt"
Issues = "https://github.com/typenoob/nxbt/issues"

[project.scripts]
nxbt = "nxbt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "nxbt/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["nxbt"]

[tool.flake8]
max-line-length = 100
exclude = [".git", ".eggs", "__pycache__", "tests/", "docs/", "build/", "dist/"]

[[tool.uv.index]]

url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
    "ruff>=0.14.4",
]
